Utilisation DotEnv pour fichier de configuration

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 /.idea/
 /vendor/
+
+# On ignore les fichiers de configuration (données sensibles)
+.env*
+
+# On conserve tout de même un fichier d'exemple avec les clés nécessaires
+!.env.example
