--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,7 @@
             "M2i\\Blog\\": "src/"
         }
     },
-    "require": {}
+    "require": {
+        "vlucas/phpdotenv": "^5.6"
+    }
 }
