Mailer PHP avec composer et test envoi de fichier avec Mailtrap.IO

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,10 @@ DB_HOSTNAME=
 DB_DATABASE=
 DB_USERNAME=
 DB_PASSWORD=
+
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USER=
+MAIL_PWD=
+MAIL_FROM_ADDRESS=
+MAIL_FROM_NAME=
