--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     },
     "require": {
         "vlucas/phpdotenv": "^5.6",
-        "phpmailer/phpmailer": "^7.0"
+        "phpmailer/phpmailer": "^7.0",
+        "smarty/smarty": "^5.7"
     }
 }
