Configuration du cache de Smarty via le .env

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,7 @@ MAIL_USER=
 MAIL_PWD=
 MAIL_FROM_ADDRESS=
 MAIL_FROM_NAME=
+
+# Activation ou non du cache de Smarty
+# TRUE or FALSE
+SMARTY_CACHE=TRUE
