--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "vlucas/phpdotenv": "^5.6",
         "phpmailer/phpmailer": "^7.0",
-        "smarty/smarty": "^5.7"
+        "smarty/smarty": "^5.7",
+        "firebase/php-jwt": "^7.0"
     }
 }
