Création d'un article avec récupération de l'utilisateur via token

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,8 @@ MAIL_FROM_NAME=
 # Activation ou non du cache de Smarty
 # TRUE or FALSE
 SMARTY_CACHE=TRUE
+
+# Configuration JWT
+JWT_KEY=votre_secret_super_long_et_securise_minimum_64_caracteres_aleatoires
+JWT_ALGORITHM=HS256
+JWT_LIFETIME=300 # En secondes
