--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "vlucas/phpdotenv": "^5.6",
         "phpmailer/phpmailer": "^7.0",
         "smarty/smarty": "^5.7",
-        "firebase/php-jwt": "^7.0"
+        "firebase/php-jwt": "^7.0",
+        "monolog/monolog": "^3.10"
     }
 }
