--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,8 @@
         "firebase/php-jwt": "^7.0",
         "monolog/monolog": "^3.10",
         "zircote/swagger-php": "^6.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^12.5"
     }
 }
